--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,6 @@ body {
 
 a:focus {
   outline: none !important;
-  word-break: ;
-  word-wrap: ;
 }
 
 a:hover {
@@ -40,21 +38,14 @@ a:hover {
   right: 0;
   bottom: 0;
   transition: opacity 0.5s;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 .terminalWrap {
-  position: absolute;
-  top: 0;
-}
-
-.main .terminal {
   background: rgb(43, 5, 28);
+  height: 65px;
+}
+.terminalTxt {
   padding: 3px;
   margin: 0;
-  width: 100%;
   /* color: #39d695; */
   color: white;
   text-shadow: 2px 2px 1px hsla(155, 55%, 28%, 0.568);
@@ -91,6 +82,15 @@ a:hover {
   100% {
     opacity: 0;
   }
+}
+
+.projets {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 500px;
+  overflow-wrap: break-word;
 }
 
 .projet {
@@ -641,6 +641,3 @@ PROEJT 1-2
 
 
 */
-
-.listing {
-}
