--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ a:hover {
   /* color: #39d695; */
   color: white;
   text-shadow: 2px 2px 1px hsla(155, 55%, 28%, 0.568);
-  font-size: calc(25px);
+  font-size: 1.5rem;
   font-family: terminal;
 }
 
@@ -58,7 +58,7 @@ a:hover {
   color: white;
   border: none;
   width: 90%;
-  font-size: calc(25px);
+  font-size: 1.5rem;
   font-family: terminal;
 }
 .main input:focus {
@@ -105,7 +105,7 @@ a:hover {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: calc(10px + 5vh);
+  font-size: 3rem;
   box-shadow: 2px 2px 1px hsla(155, 55%, 28%, 0.568);
   text-shadow: 2px 2px 1px hsla(155, 55%, 28%, 0.568);
   width: 150px;
@@ -643,3 +643,44 @@ PROEJT 1-2
 
 
 */
+.unit {
+  transition: 0.5s;
+  border: 1px solid black;
+  height: 1.5em;
+  display: grid;
+  grid-template-columns: 4fr 4fr 1fr;
+  border-radius: 2px;
+}
+
+.unit > * {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.div_thumbnail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform-origin: bottom;
+}
+
+#popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.75);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  transform-origin: bottom;
+  transition: 0.5s;
+}
+#popup_window {
+  height: 90%;
+  width: 300px;
+  background: white;
+  margin: 10% auto;
+}
