--- a/src/App.css
+++ b/src/App.css
@@ -666,6 +666,14 @@ PROEJT 1-2
 
 
 */
+.projet12 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .projet12 header {
   background: rgb(126, 0, 0);
   color: gold;
@@ -675,17 +683,31 @@ PROEJT 1-2
 .listing {
   background: rgb(126, 0, 0);
 }
+.filter_zone {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 500px) {
+  .filter_zone {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+/* @media screen and (max-width: 1080) {
+  .filter_zone {
+    grid-template-columns: 1fr;
+  }
+} */
 
 .listing input,
 .listing form {
   color: goldenrod;
-  display: inline;
-  margin: auto;
+  width: 100%;
 }
 
 .tableau {
   border: 10px solid rgb(126, 0, 0);
-  min-height: 300px;
+  min-height: 700px;
   min-width: 200px;
   padding: 20px;
   color: white;
@@ -712,6 +734,18 @@ PROEJT 1-2
   /* font-family: movie; */
 }
 
+.projet12 .empty {
+  width: 100%;
+  height: 660px;
+  display: grid;
+  grid-template-columns: 1fr;
+  color: gold;
+  text-align: center;
+}
+
+.projet12 footer {
+  background: rgb(126, 0, 0);
+}
 /* .div_thumbnail {
   display: flex;
   flex-direction: column;
