--- a/src/App.css
+++ b/src/App.css
@@ -964,7 +964,23 @@ PROJET 1-3
   right: 0;
   bottom: 0;
   transition: 1.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
 }
+.arrowDown {
+  border: 10px solid rgba(0, 0, 0, 0);
+  border-top-color: black;
+  width: 0px;
+  margin: auto;
+}
+
+#loginForm {
+  transition: 1s;
+}
+
 /*
 
 
