--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@ body {
   scroll-behavior: smooth;
 }
 
+.transition05 {
+  transition: 0.5s !important;
+}
+
+.h0rem {
+  height: 0 !important;
+}
+
+.h2rem {
+  height: 2.2rem !important;
+}
+
 @font-face {
   font-family: terminal;
   src: url(./font/UbuntuMono-R.ttf);
@@ -592,10 +604,6 @@ section {
   transition: 1s;
 }
 
-.contact {
-  max-width: 500px !important;
-}
-
 @media screen and (max-width: 576px) {
   .menuItem {
     height: 30px;
@@ -968,7 +976,6 @@ PROJET 1-3
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid red;
 }
 .arrowDown {
   border: 10px solid rgba(0, 0, 0, 0);
@@ -1114,4 +1121,56 @@ PROEJT 1-4
 
 .noscroll::-webkit-scrollbar {
   display: none;
+}
+
+/*
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+PROJET 5 CONTACT
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*/
+.contact {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: 1.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
