--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,8 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  transition: opacity 0.5s;
   overflow-x: hidden;
+  transition: 0.5s;
 }
 .terminalWrap {
   background: rgb(43, 5, 28);
