--- a/src/App.css
+++ b/src/App.css
@@ -968,7 +968,7 @@ PROJET 1-3
 }
 .arrowDown {
   border: 10px solid rgba(0, 0, 0, 0);
-  border-top-color: black;
+  border-top-color: white;
   width: 0px;
   margin: auto;
 }
