--- a/src/App.css
+++ b/src/App.css
@@ -740,6 +740,10 @@ PROEJT 1-2
   width: 100%;
 }
 
+.listing input::placeholder {
+  text-align: center;
+}
+
 .tableau {
   border: 10px solid rgb(126, 0, 0);
   min-height: 700px;
@@ -979,6 +983,11 @@ PROJET 1-3
 
 #loginForm > * {
   margin-bottom: 3px;
+}
+
+.sideForm input::placeholder,
+#loginForm input::placeholder {
+  text-align: center;
 }
 
 /*
