--- a/src/App.css
+++ b/src/App.css
@@ -1221,3 +1221,24 @@ PROJET 5 CONTACT
   align-items: center;
   justify-content: center;
 }
+.toasty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 2.3rem;
+  transition: 1s ease-out;
+  position: absolute;
+  top: 10px;
+  right: -74%;
+  line-height: 1rem;
+}
+.toasty-success {
+  top: 10px;
+  font-size: 1.3rem;
+}
+
+.toasty-error {
+  top: 50px;
+  font-size: 0.95rem;
+}
