--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ a:hover {
   right: 0;
   bottom: 0;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 1s;
 }
 .terminalWrap {
   background: rgb(43, 5, 28);
@@ -723,7 +723,7 @@ PROEJT 1-2
   left: 0;
   right: 0;
   bottom: 0;
-  transition: 0.5s;
+  transition: 1s;
 }
 
 .projet12 header {
@@ -946,7 +946,7 @@ PROJET 1-3
 .fitness {
   /* background: rgb(38, 36, 58); */
   /* background: black; */
-  transition: 1.5s;
+  transition: 1s;
 }
 
 .sideForm_sticky {
@@ -983,7 +983,7 @@ PROJET 1-3
 }
 
 .fitness .back:hover > * {
-  transform: scale(1.5);
+  transform: scale(1);
 }
 
 @media screen and (max-width: 720px) {
@@ -1009,7 +1009,7 @@ PROJET 1-3
   left: 0;
   right: 0;
   bottom: 0;
-  transition: 1.5s;
+  transition: 1s;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1028,6 +1028,21 @@ PROJET 1-3
 
 #loginForm > * {
   margin-bottom: 3px;
+}
+
+.loginScene .back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 2.3rem;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 15%;
+}
+.loginScene .back:hover > * {
+  transform: scale(1.25);
 }
 
 .sideForm input::placeholder,
@@ -1089,7 +1104,7 @@ PROEJT 1-4
 
 */
 .inspiration {
-  transition: 1.5s;
+  transition: 1s;
 }
 .opacityZero {
   opacity: 0;
@@ -1215,7 +1230,7 @@ PROJET 5 CONTACT
   left: 0;
   right: 0;
   bottom: 0;
-  transition: 1.5s;
+  transition: 1s;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1241,4 +1256,18 @@ PROJET 5 CONTACT
 .toasty-error {
   top: 50px;
   font-size: 0.95rem;
+}
+.contact .back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 2.3rem;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 15%;
+}
+.contact .back:hover > * {
+  transform: scale(1.25);
 }
