--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ a:hover {
   bottom: 0;
   overflow-x: hidden;
   transition: 1s;
+  opacity: 0;
 }
 .terminalWrap {
   background: rgb(43, 5, 28);
@@ -735,11 +736,12 @@ PROEJT 1-2
 }
 
 .projet12 .back {
-  color: gold;
+  color: rgb(126, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background: gold;
 }
 
 .projet12 .back:hover {
@@ -944,8 +946,6 @@ PROJET 1-3
 
 */
 .fitness {
-  /* background: rgb(38, 36, 58); */
-  /* background: black; */
   transition: 1s;
 }
 
@@ -963,17 +963,6 @@ PROJET 1-3
   min-height: 1000px;
 }
 
-.exercice {
-  /* width: 23rem; */
-  /* height: 80%; */
-  /* background: rgb(176, 199, 209); */
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  transform-origin: bottom; */
-  /* padding: 10px; */
-}
-
 .fitness canvas {
   border-radius: 10px;
 }
@@ -983,7 +972,13 @@ PROJET 1-3
 }
 
 .fitness .back:hover > * {
-  transform: scale(1);
+  transform: scale(1.25);
+}
+
+.sideForm input::placeholder,
+#loginForm input::placeholder,
+#signinForm input::placeholder {
+  text-align: center;
 }
 
 @media screen and (max-width: 720px) {
@@ -1022,11 +1017,13 @@ PROJET 1-3
   margin: auto;
 }
 
-#loginForm {
+#loginForm,
+#signinForm {
   transition: 1s;
 }
 
-#loginForm > * {
+#loginForm > *,
+#signinForm > * {
   margin-bottom: 3px;
 }
 
@@ -1045,9 +1042,11 @@ PROJET 1-3
   transform: scale(1.25);
 }
 
-.sideForm input::placeholder,
-#loginForm input::placeholder {
-  text-align: center;
+.signup_link h3 {
+  font-size: 0.9rem;
+}
+.signup_link .arrowDown {
+  border-width: 5px;
 }
 
 /*
@@ -1183,6 +1182,21 @@ PROEJT 1-4
 
 .noscroll::-webkit-scrollbar {
   display: none;
+}
+
+.inspiration .back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 2.3rem;
+  position: fixed;
+  top: 7%;
+  left: 0;
+  width: 15%;
+}
+.inspiration .back:hover > * {
+  transform: scale(1.25);
 }
 
 /*
