--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,6 @@ body {
   height: 2.2rem !important;
 }
 
-@font-face {
-  font-family: terminal;
-  src: url(./font/UbuntuMono-R.ttf);
-}
-
 ::selection {
   color: white;
   background: rgb(114, 159, 243);
@@ -63,7 +58,7 @@ a:hover {
   color: white;
   text-shadow: 2px 2px 1px hsla(155, 55%, 28%, 0.568);
   font-size: 1.1rem;
-  font-family: terminal;
+  font-family: "Ubuntu Mono";
 }
 
 .main input {
@@ -72,7 +67,7 @@ a:hover {
   border: none;
   width: 90%;
   font-size: 1.1rem;
-  font-family: terminal;
+  font-family: "Ubuntu Mono";
 }
 .main input:focus {
   outline: none;
@@ -241,10 +236,6 @@ FIRST
 
 
  */
-
-/* .first {
-  font-family: cracked;
-} */
 
 .first {
   transition: 2s;
@@ -804,15 +795,11 @@ PROEJT 1-2
   padding-left: 5px;
   color: black;
 }
-/* @font-face {
-  font-family: movie;
-  src: url(./font/SF_Movie_Poster.ttf);
-} */
+
 .unit > * {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  /* font-family: movie; */
 }
 
 .unit .price:after {
