--- a/src/App.css
+++ b/src/App.css
@@ -804,7 +804,7 @@ PROEJT 1-2
   background: gold;
 }
 
-.projet12 .back:hover {
+.projet12 .back:hover > * {
   transform: scale(1.2);
 }
 
@@ -1029,6 +1029,9 @@ PROJET 1-3
 
 .fitness h1 {
   font-size: 2rem;
+}
+.fitness h1:nth-child(2) {
+  margin: 0;
 }
 .fitness h1:nth-child(3) {
   text-overflow: ellipsis;
