--- a/src/App.css
+++ b/src/App.css
@@ -1329,10 +1329,14 @@ PROJET 5 CONTACT
   top: 10px;
   right: -74%;
   line-height: 1rem;
+  width: 75%;
 }
 .toasty-success {
   top: 10px;
   font-size: 1.3rem;
+}
+.r0 {
+  right: 0 !important;
 }
 
 .toasty-error {
@@ -1340,11 +1344,21 @@ PROJET 5 CONTACT
   font-size: 0.95rem;
 }
 
-@media screen and (min-width: 900px) {
-  .toasty-error {
-    font-size: 1.2rem;
+@media screen and (min-width: 540px) {
+  .toasty {
+    right: -49%;
+    width: 50%;
   }
 }
+
+@media screen and (min-width: 900px) {
+  .toasty {
+    right: -24%;
+    width: 25%;
+    padding-left: 5px;
+  }
+}
+
 .contact .back {
   display: flex;
   flex-direction: column;
@@ -1358,4 +1372,10 @@ PROJET 5 CONTACT
 }
 .contact .back:hover > * {
   transform: scale(1.25);
+}
+
+.contact .back,
+.fitness .back,
+.inspiration .back {
+  max-width: 100px;
 }
