--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ a:hover {
   bottom: 0;
 }
 .loading {
+  position: relative;
   border: 3px solid #343a40;
   border-top-color: rgba(255, 255, 255, 0);
   border-bottom-color: rgba(255, 255, 255, 0);
@@ -46,7 +47,19 @@ a:hover {
   height: 50px;
   transition: opacity 0.3s;
   opacity: 0;
-  animation: spin 0.5s linear infinite;
+  animation: spin 1s linear infinite;
+}
+.insideLoading {
+  width: 50%;
+  height: 50%;
+  border-radius: 50%;
+  background: white;
+  border: 1px solid black;
+  position: absolute;
+}
+.insideLoading2 {
+  bottom: 0;
+  right: 0;
 }
 
 @keyframes spin {
