--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,22 @@ MAIN
   transform: scale(1.1);
 }
 
+.main footer {
+  position: fixed;
+  bottom: 0;
+  height: 30px;
+  border-top: 1px solid #00ff95;
+  line-height: 30px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  box-shadow: 0px -2px 10px black;
+}
+
+.main footer a {
+  color: #00ff95;
+}
+
 /*
 
 
