--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,7 @@ MAIN
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  box-shadow: 0px -2px 10px black;
+  box-shadow: 0px -2px 10px hsla(155, 55%, 28%, 0.9);
 }
 
 .main footer a {
