added project 6, just simple random circle/ellipse/rect svg generator

--- a/src/App.css
+++ b/src/App.css
@@ -1412,3 +1412,54 @@ PROJET 5 CONTACT
 .inspiration .back {
   max-width: 100px;
 }
+/*
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+PROJET 1-6
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*/
+
+.svg_random input::placeholder {
+  text-align: center;
+}
